[fix]：修改搜索社区内容

--- a/layouts/partials/content_search.html
+++ b/layouts/partials/content_search.html
@@ -8,8 +8,8 @@
                         <label for="type-bing" data-id="group-a"><span>常用</span></label>
                         <label for="type-perplexity" data-id="group-b"><span>AI搜索</span></label>
                         <label for="type-whois" data-id="group-c"><span>工具</span></label>
-                        <label for="type-zhihu" data-id="group-d"><span>社区</span></label>
-                        <label for="type-BSC" data-id="group-e"><span>链上数据查询</span></label>
+                        <label for="type-x" data-id="group-d"><span>社区</span></label>
+                        <!-- <label for="type-BSC" data-id="group-e"><span>链上数据查询</span></label> -->
                         <label for="type-zhaopin" data-id="group-f"><span>求职</span></label>
                     </div>
                 </div>
@@ -129,9 +129,9 @@
                 <div class="search-group group-d">
                     <ul class="search-type">
                         <li>
-                            <input hidden="" type="radio" name="type" id="type-zhihu"
-                                value="https://www.zhihu.com/search?type=content&q=" data-placeholder="知乎" />
-                            <label for="type-zhihu"><span class="text-muted">知乎</span></label>
+                            <input hidden="" type="radio" name="type" id="type-x"
+                                value="https://x.com/search?q=" data-placeholder="X" />
+                            <label for="type-x"><span class="text-muted">X</span></label>
                         </li>
                         <li>
                             <input hidden="" type="radio" name="type" id="type-wechat"
